<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"  >

    <data>
        <variable
            name="viewModel"
            type="com.ghostapps.placapp.viewModel.preGame.PreGameViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/preGameToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/preGameGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <!-- Home Team -->
    <TextView
        android:id="@+id/preGameHomeTeamLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/preGameHomeTeamLabel"
        app:layout_constraintEnd_toStartOf="@id/preGameGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/preGameHomeTeamInput"
        app:layout_constraintBottom_toBottomOf="@id/preGameHomeTeamInput"/>

    <EditText
        android:id="@+id/preGameHomeTeamInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="textCapWords"
        android:text="@={viewModel.athleteOneName}"
        app:layout_constraintStart_toEndOf="@id/preGameGuideline"
        app:layout_constraintTop_toBottomOf="@id/preGameToolbar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Away Team -->
    <TextView
        android:id="@+id/preGameAwayTeamLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/preGameAwayTeamLabel"
        app:layout_constraintEnd_toStartOf="@id/preGameGuideline"
        app:layout_constraintTop_toBottomOf="@id/preGameHomeTeamLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/preGameAwayTeamInput"
        app:layout_constraintBottom_toBottomOf="@id/preGameAwayTeamInput"/>

    <EditText
        android:id="@+id/preGameAwayTeamInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="textCapWords"
        android:text="@={viewModel.athleteTwoName}"
        app:layout_constraintStart_toEndOf="@id/preGameGuideline"
        app:layout_constraintTop_toBottomOf="@id/preGameHomeTeamInput"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/preGameStartGameButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="30dp"
        android:onClick="@{_ -> viewModel.onStartGamePressed()}"
        android:text="@string/preGameStart"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="100dp"
        app:backgroundTint="@color/colorAccent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>